Fixed overflow for long project descriptions

--- a/apps/apps_template.css
+++ b/apps/apps_template.css
@@ -11,6 +11,7 @@ body{
 
 table th , table td{
     text-align: center;
+    max-width: 400px;
 }
 
 table tr:nth-child(even){
